Sticky headers implemented, new bug new appening field is not visible if scrolled up.

--- a/app/assets/stylesheets/appenings.css.scss
+++ b/app/assets/stylesheets/appenings.css.scss
@@ -67,6 +67,7 @@ topbar elements
 	font-size: 2em;
 	background-color: $headerBackground;
 	height: 40px;
+	z-index: 10;
 }
 
 .container{
@@ -110,11 +111,12 @@ a.button:link, a.button:visited, a.button:active{
 }
 
 .appeningHeader{
-	z-index: 100;
+	position: relative;
+	z-index: 1000;
 	background-color: $headerBackground;
 	color: $headerFont;
-	height: 30px;
-	padding: 5px;
+	height: 40px;
+	line-height: 40px;
 	margin-bottom: 2px;
 }
 
@@ -134,7 +136,9 @@ a.button:link, a.button:visited, a.button:active{
 /* individual appening */
 
 .appeningEntries{
+	position: relative;
 	background-color: $background;
+	z-index: -10000;
 }
 
 .appening{
